# Seek

./: .dockerignore  .gitignore  .vercelignore  README.md  package.json  render.yaml
backend/: .env.example  .vercelignore  Dockerfile  pyproject.toml  requirements.txt  schema.sql
backend/app/: main.py  models.py  search.py  seed.py  vector_store.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/catalog/: page.tsx
frontend/app/debug/: page.tsx
frontend/app/search/: page.tsx
frontend/components/: CatalogStats.tsx  EmptyState.tsx  LoadingSkeleton.tsx  Nav.tsx  QueryChips.tsx  RankingBreakdown.tsx  ResultCard.tsx  ResultModal.tsx  ResultsGrid.tsx  SearchBar.tsx  SearchDebugger.tsx
frontend/lib/: search.ts  seed.ts  types.ts
scripts/: enrich_omdb.py  enrich_tmdb_details.py  import_catalog.py  import_tmdb_netflix.py  import_unogs_netflix.py  migrate_sqlite_to_postgres.py
