[project]
name = "seek-api"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.10.4",
  "python-multipart==0.0.20",
  "psycopg[binary]==3.2.3",
  "openai==1.57.4",
  "httpx==0.28.1",
  "python-dotenv==1.2.2",
  "numpy==2.2.1",
]

[tool.vercel]
entrypoint = "app.main:app"
